
   ? 	mime.c, uri.c: Fix message/rfc822 hack.

   ?	Add a minimum size limit for conditional extraction of a MIME
   	part. Requested by AlexB.

   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.21--

   *    Upgraded SQLite to 3.7.16.1


--1.75.20--

   *    Upgraded SQLite to 3.7.15.2

  !!	Fix seg.fault in SPF for IP or mail/domain parsing error.

   !	When an alternate SPF TXT recorded is supplied, then the default
   	result should be Neutral, instead of None. eg. -t "v=spf1"

   !	Fix SPF %{i} handling of IPv6 address.

   !	Fix SPF handling of %{l+}; plus-sign was being treated as a
   	Sendmail special delimiter, instead of just a literal.

   !	Add support for SPF RR type 99.

   +	Add spf-test.sh RFC conformance test script.

--1.75.19--

   !	Add highwater and lifetime counters to "sift" database.

   !	Fix parseIPv6() for "1:2:3:4:5:6:7::".

   !	Fix formatIP() compact formatting of "1:2:3:4:5:6:7:0".

   !    Fix formatIP() buffer overflow by one when the buffer size is
        IPV6_STRING_LENGTH for a full length IPv6 address that cannot
	be compressed, eg. 1234:5678:9ABC:DEF0:1234:5678:9ABC:DEF0.

   !	Fix off-by-one bugs in in disrupted_transposition().

   !	uri now includes data: in scheme-to-port table.

   !	Added more HTTP_ API status codes.

   !    Fixed isReservedIPv6() handling of IS_IP_V6_RESERVED, introduced
        in 1.75.17, as being part of IS_IP_RESTRICTED; broke pdq pruning
        code. Restored IS_IP_V6_COMPATIBLE.

   !	Fixed pdq handling of MX/CNAME lookup per RFC 5321 section 5.1.

   !	Fix berkeley_db.h related macros for DB 5.x. Reported by Ben Parker.

   !	Relaxed the handling of MIME boundaries to allow any printable
	ASCII character to be used following the initial "--". RFC 2046
	section 5.1.1 limits the set of boundary characters to those